# GameOfLife

./: .gitignore  .versionrc.json  ActionButton.qml  CMakeLists.txt  CustomImage.qml  CustomSlider.qml  GameGrid.qml  GameSliders.qml  Main.qml  README.md  UIGrid.cpp  UIGrid.hpp  UIParameters.cpp  UIParameters.hpp  build.ps1  build.sh  conanfile.py  conanfile.txt  main.cpp
.github/workflow/: ci.yml
.github/workflows/: auto-release.yml  auto-tag.yml  ci.yml  codeql.yml  lint.yml  release.yml
src/: CMakeLists.txt  InputChecker.cpp  InputChecker.hpp  gameOfLife.cpp  main.cpp
src/Back/: InputChecker.cpp  InputChecker.hpp
src/Back/Game/: AllowedChar.hpp  Board.cpp  Board.hpp  Cell.hpp  Game.cpp  Game.hpp  OutputWriter.cpp  OutputWriter.hpp  Parser.cpp  Parser.hpp  PatternList.hpp
src/Back/SvgGenerator/: PatternSVGGenerator.hpp  generatePatternsSvg.cpp
src/Front/: Main.qml  main.cpp
src/Front/Bridge/: LexiconModel.cpp  LexiconModel.hpp  MainGridImageProvider.cpp  MainGridImageProvider.hpp  MainGridModel.cpp  MainGridModel.hpp  ThreadProxy.cpp  ThreadProxy.hpp  UIBridge.cpp  UIBridge.hpp  UIGrid.cpp  UIGrid.hpp
src/Front/QMLComponents/: ActionButton.qml  CustomImage.qml  CustomSlider.qml  CustomText.qml  ExplanationElements.qml  ExplanationExamples.qml  GameGrid.qml  GameSliders.qml  GenericPopUp.qml  LexiconElements.qml  LexiconPopUp.qml  Overlay.qml
src/Front/assets/: lexicon.txt
src/Game/: AllowedChar.hpp  Board.cpp  Board.hpp  Cell.cpp  Cell.hpp  Game.cpp  Game.hpp  OutputWriter.cpp  OutputWriter.hpp  Parser.cpp  Parser.hpp
tests/: InputsBoards.hpp  functional_tests.cpp  tests_utilities.cpp  tests_utilities.hpp  unit_tests.cpp
tests/Back/: functional_tests.cpp  tests_utilities.cpp  tests_utilities.hpp  unit_tests.cpp
tests/Back/input_files/: badFile1.txt  badFile2.txt  badFile3.txt  badFile4.txt  badFile5.txt  bigStable.txt  large.txt  random.txt
tests/Back/input_files/oscillators/: beaconG2.txt  blinkerG1.txt  pentaDecathlonG1.txt  pentaDecathlonG10.txt  pentaDecathlonG11.txt  pentaDecathlonG12.txt  pentaDecathlonG13.txt  pentaDecathlonG14.txt  pentaDecathlonG15.txt  pentaDecathlonG2.txt  pentaDecathlonG3.txt  pentaDecathlonG4.txt  pentaDecathlonG5.txt  pentaDecathlonG6.txt  pentaDecathlonG7.txt  pentaDecathlonG8.txt  pentaDecathlonG9.txt  pulsarG1.txt  pulsarG2.txt  pulsarG3.txt  toadG1.txt  toadG2.txt
tests/Back/input_files/spaceship/: gliderG1.txt  gliderG5.txt  gosperGliderGunG1.txt  gosperGliderGunG500.txt  rPentomino.txt  rPentominoG1000.txt
tests/Back/input_files/still_lifes/: boat.txt
tests/Back/unit_tests/: AllowedChar_Test.cpp  Board_Test.cpp  Game_Test.cpp  InputChecker_Test.cpp  OutputWriter_Test.cpp  Parser_Test.cpp  PatternList_Test.cpp
tests/Front/: tests_utilities.cpp  tests_utilities.hpp
tests/Front/Bridge/: LexiconModel_Test.cpp  MainGridImageProvider_Test.cpp  ThreadProxy_Test.cpp
tests/input_files/: badFile1.txt  badFile2.txt  badFile3.txt  badFile4.txt  badFile5.txt  beaconP2.txt  bigStable.txt  blinkerP1.txt  block.txt  boat.txt  large.txt  pulsarP2.txt  pulsarP3.txt  random.txt  single.txt  toadP2.txt  tub.txt
tests/input_files/oscillators/: beaconG1.txt  beaconG2.txt  blinkerG1.txt  blinkerG2.txt  pentaDecathlonG1.txt  pentaDecathlonG10.txt  pentaDecathlonG11.txt  pentaDecathlonG12.txt  pentaDecathlonG13.txt  pentaDecathlonG14.txt  pentaDecathlonG15.txt  pentaDecathlonG2.txt  pentaDecathlonG3.txt  pentaDecathlonG4.txt  pentaDecathlonG5.txt  pentaDecathlonG6.txt  pentaDecathlonG7.txt  pentaDecathlonG8.txt  pentaDecathlonG9.txt  pulsarG1.txt  pulsarG2.txt  pulsarG3.txt  toadG1.txt  toadG2.txt
tests/input_files/spaceship/: gliderG1.txt  gliderG5.txt  gosperGliderGun.txt  gosperGliderGunG1.txt  gosperGliderGunG1000.txt  gosperGliderGunG500.txt  rPentomino.txt  rPentominoG1000.txt
tests/input_files/still_lifes/: beeHive.txt  boat.txt  loaf.txt  tub.txt
tests/unit_tests/: Board_Test.cpp  Game_Test.cpp  InputChecker_Test.cpp  OutputWriter_Test.cpp  Parser_Test.cpp  Tests_InputChecker.txt
